# comp5425_assignment2_jpeg_encoder

./: .gitignore  CMakeLists.txt  Implement a JPEG encoder step by step.ipynb  README.md  setup.py
include/: HuffmanCodec.hpp  JpegColor.hpp  JpegEncoder.hpp  JpegIO.hpp  JpegQuant.hpp  JpegZigzag.hpp  common.hpp  image.hpp
python/: bind.cpp  jpeg_encoder.py
src/: HuffmanCodec.cpp  JpegColor.cpp  JpegEncoder.cpp  JpegIO.cpp  JpegQuant.cpp  JpegZigzag.cpp  encoder.cpp  image.cpp
test/: test_image.cpp
